# mk-dl-bot_legacy

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  docker-compose-dev.yml  docker-compose.yml
k8s/: 00_namespace.yml  02_deployment.yml  03_db-stateful-set.yml  04_db-service.yml  05_tg-stateful-set.yml  06_tg-service.yml  1_deployment.yml  2_db-stateful-set.yml  3_db-service.yml
locales/: en.yml
migrations/: 1_init.sql
src/: bot.rs  db.rs  dl.rs  log.rs  main.rs  util.rs
src/bot/: bot.rs  dl.rs  log.rs  notify.rs  op.rs  request.rs  request_chat.rs  sanitize.rs  start.rs  types.rs  util.rs  version.rs
src/db/: chat.rs  user.rs
src/dl/: download.rs  ffmpeg.rs  ffprobe.rs  spawn.rs  tmpfile.rs  yt_dlp.rs
src/security/: sanitize.rs
